fix traffic lights position on Firefox 74

--- a/useful-conf/firefox-userchrome/userChrome.css
+++ b/useful-conf/firefox-userchrome/userChrome.css
@@ -223,7 +223,7 @@ toolbarbutton#alltabs-button {
 .titlebar-buttonbox-container {
   position: absolute;
   display: block;
-  margin-top: -42px
+  margin-top: -30px;
 }
 
 #PanelUI-webext-privacy_privacy_com-browser-action-view {
